plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nowayback'
version = '0.0.1-SNAPSHOT'
description = 'funding'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    agent
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2025.0.0")
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Spring Cloud
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // OpenFeign
    implementation 'io.github.openfeign:feign-hc5:13.1'

    // Swagger/OpenAPI (SpringDoc)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql:42.7.7'

    // Flyway (라이브러리 의존성만)
//    implementation 'org.flywaydb:flyway-core'
//    runtimeOnly 'org.flywaydb:flyway-database-postgresql'

    // Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.52.0'

    // MSK IAM Auth
    implementation 'software.amazon.msk:aws-msk-iam-auth:2.0.3'

    // WireMock (테스트용)
    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'

    // H2 Database (테스트용)
    testRuntimeOnly 'com.h2database:h2'

    // OpenTelemetry Agent
    agent 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.10.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.register('downloadAgent', Copy) {
    from configurations.agent.singleFile
    into projectDir
    rename 'opentelemetry-javaagent-.*\\.jar', 'opentelemetry-javaagent.jar'
}

test {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}